# dwg-table-exporter

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-entrypoint.sh  ezdxf.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
docker/oda/: README.md
dwg_table_exporter/: __init__.py  acad_table_reader.py  api.py  config.py  drawn_table_reader.py  dxf_reader.py  excel_writer.py  io_loader.py  pipeline.py  text_clean.py  title_rules.py
scripts/: run_api.ps1  run_api.sh
src/masc_ahu_dwg2excel_api/: __init__.py  api.py  cli.py  drawn_table_reader.py  dxf_reader.py  excel_writer.py  io_loader.py  models.py  pipeline.py  reporting.py  table_filters.py  text_clean.py  title_rules.py
src/masc_ahu_dwg2excel_api/static/: index.html
static/: index.html
tests/: __init__.py  test_api.py
